--- a/src/component/sidebar/Sidebar.css
+++ b/src/component/sidebar/Sidebar.css
@@ -10,10 +10,12 @@
   margin-left: 2rem;
   font-size: 2rem;
   background: none;
+  position: absolute;
+  background-color:  rgba(39, 46, 56, 1);
 }
 
 .nav-menu {
-  background-color:  #589981;
+  background-color:  rgba(39, 46, 56, 1);
   width: 250px;
   height: 100vh;
   display: flex;
@@ -51,22 +53,25 @@
 }
 
 .nav-text a:hover {
-  background-color: #C7E5C9;
+  background-color:  rgba(224, 228, 231, 1);
+  ;
 }
 
 .nav-menu-items {
   width: 100%;
+  background-color:  rgba(39, 46, 56, 1);
 }
 
 .navbar-toggle {
-  background-color: #589981;
-  ;
+  background-color:  rgba(39, 46, 56, 1);;
+  
   width: 100%;
   height: 80px;
   display: flex;
   justify-content: start;
   align-items: center;
   margin:0;
+  
 }
 
 span {
@@ -74,5 +79,21 @@ span {
 }
 .side-heading{
   color: #FFFFFF;
-
+  position: relative;
+  left:40px;
+  background-color:  rgba(39, 46, 56, 1);
+  width: 00px;
+}
+.side-down{
+  color: #FFFFFF;
+  position: relative;
+  background-color: transparent;
+  border: none;
+  top: 800px;
+  left:0px;
+  font-size:large;
+  cursor: pointer;
+}
+.left-icon {
+  margin-right: -20px; /* Adjust as needed */
 }
